<resources>
    <string name="app_name">My Health</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="field_empty">Field Required!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">activity_login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="categories">Categories</string>
    <string name="exams">Exams</string>
    <string name="fiscal_code">Fiscal Code</string>
    <string name="register">Register</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="logout">Logout</string>
    <string name="title_activity_clinic_location">ClinicLocationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="choose_the_day_and_time_of_the_exam">Choose the day and time of the exam</string>
    <string name="book">Book</string>
    <string name="oops">Oops...</string>
    <string name="dialogMessage1">Select date and hour before book!</string>
    <string name="ok">OK</string>
    <string name="doctors">Doctors</string>
    <string name="desc_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque ornare aenean euismod elementum nisi quis eleifend. Cras semper auctor neque vitae tempus quam. Nibh sed pulvinar proin gravida hendrerit lectus a. Magna ac placerat vestibulum lectus mauris ultrices eros in. Lacus laoreet non curabitur gravida arcu. Sit amet dictum sit amet justo donec.</string>
    <string name="curriculum_vitae">Curriculum Vitae:</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="select_birthday">Select Birthday</string>
    <string name="my_location">MY LOCATION</string>
    <string name="service_not_available">Servizio non disponibile</string>
    <string name="invalid_credentials">Credenziali errate</string>
    <string name="access_denied">Accesso negato</string>
    <string name="request_not_valid">Richiesta non valida</string>
    <string name="alredy_exist">Username, Email or Fiscal Code alredy exist!</string>
    <string name="invalid_fiscal_code">Invalid Fiscal Code</string>
    <string name="select_date">Select Date...</string>
    <string name="select_hour">Select Hour...</string>
    <string name="book_ok">Prenotazione effettuata</string>
    <string name="hour_not_available">Orario non disponibile!</string>
</resources>